<resources>
    <string name="app_name">AIHotel</string>

    <string name="app_logo">AIHotel</string>
    <string name="app_tip">爱住智慧酒店解决方案</string>

    <string name="simple_view_behavior">com.lzy.demo.ui.SimpleViewBehavior</string>
    <string name="translate_up_down_behavior">com.spy.wb.aihotel_new.widget.behavior.TranslateUpDownBehavior</string>

    <string name="check_face_connection_info">
        设备编号：22\n工作环境：电梯间\n连接状态：成功\n
    </string>

    <!-- 抽屉菜单 -->
    <string name="menu_work">工作</string>
    <string name="menu_work_face_check">人脸识别</string>
    <string name="menu_work_id_check">人证核验</string>

    <string name="menu_data">数据</string>
    <string name="menu_data_record">结果记录</string>
    <string name="menu_data_library">人脸库</string>
    <string name="menu_data_statistics">统计信息</string>

    <string name="menu_system">系统</string>
    <string name="menu_system_setting">设置</string>
    <string name="menu_system_about">关于</string>
    <string name="menu_aihotel_version">AIHotel Version: %1$s</string>
    <string name="drawer_open">抽屉打开</string>
    <string name="drawer_close">抽屉关闭</string>

    <string name="double_click_exit">再按一次退出程序</string>


    <!--SDK相关-->
    <!--settings、choose function page-->
    <string name="page_preview">face attributes detect(video)</string>
    <string name="page_ir_preview">ir liveness detect(video)</string>
    <string name="page_face_recognize">face compare 1:n(video vs database,rgb liveness detect)</string>
    <string name="page_ir_face_recognize">face compare 1:n(video vs database,ir liveness detect)</string>
    <string name="page_single_image">face attributes detect(image)</string>
    <string name="page_multi_image">face compare 1:n(image vs image)</string>
    <string name="page_face_manage">face manage</string>
    <string name="active_engine">active engine</string>
    <string name="active_success">active success</string>
    <string name="already_activated">already activated</string>
    <string name="active_failed">active failed,code is %d</string>
    <string name="library_not_found">library not found, please check if you put .so files into the project directory app\\src\\main\\jniLibs</string>
    <string name="ft_op_0">only detect 0 degree in video mode</string>
    <string name="ft_op_90">only detect 90 degree in video mode</string>
    <string name="ft_op_180">only detect 180 degree in video mode</string>
    <string name="ft_op_270">only detect 270 degree in video mode</string>
    <string name="ft_op_all">detect all degrees in video mode</string>

    <!--face attributes detect(image) page-->
    <string name="start_process">process</string>
    <string name="choose_local_image">choose local image</string>
    <string name="processing">processing</string>

    <!--face compare 1:n(image vs image) page-->
    <string name="choose_main_image">choose main image</string>
    <string name="add_item_image">add item image</string>
    <string name="notice_choose_main_img">please choose main image first</string>
    <string name="compare_failed">compare failed!code is %d</string>

    <!--global get picture failed notification-->
    <string name="get_picture_failed">failed to get picture!</string>

    <!--global permission denied notification-->
    <string name="permission_denied">permission denied!</string>

    <!--global init failed notification-->
    <string name="init_failed">init failed,code is %d</string>
    <string name="engine_not_initialized">engine not initialized! code is %d</string>

    <!--single/dual camera register&recognize page-->
    <string name="register">模拟身份证输入</string>
    <string name="switch_camera">switch camera</string>
    <string name="switch_camera_failed">switch camera failed</string>
    <string name="notice_change_detect_degree">camera switched, if no face detected, please change face detect degree in homepage</string>
    <string name="recognize_failed_notice">DENIED:%s</string>
    <string name="recognize_success_notice">PASS:%s</string>
    <string name="low_confidence_level">face low confidence level</string>
    <string name="specific_engine_init_failed">%s init failed, code is:%d</string>
    <string name="liveness_detect">liveness detect</string>
    <string name="camera_rgb">RGB CAMERA</string>
    <string name="camera_ir">IR CAMERA</string>
    <string name="camera_rgb_preview_size">RGB CAMERA\n%dx%d</string>
    <string name="camera_ir_preview_size">IR CAMERA\n%dx%d</string>
    <string name="camera_error_notice">\npossible reason:open two cameras at the same time is not allowed on this device</string>
    <string name="draw_ir_rect_mirror_horizontal">draw IR face rect mirror horizontal</string>
    <string name="draw_ir_rect_mirror_vertical">draw IR face rect mirror vertical</string>

    <!--batch process dialog-->
    <string name="progress_dialog_batch_register">progress: %d / %d</string>
    <string name="progress_dialog_registering_please_wait">registering,please wait</string>

    <!--batch process-->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="batch_process_notification_register">please put the images that need to register into directory \nsdcard/arcfacedemo/register</string>
    <string name="batch_process_no_face_need_to_delete">no face need to delete</string>
    <string name="batch_process_confirm_delete">delete those %d images and face features?</string>
    <string name="batch_process_batch_register">batch register</string>
    <string name="batch_process_notification">notification</string>
    <string name="batch_process_clear_faces">clear faces</string>
    <string name="batch_process_path_is_not_exists">path \n%s\n is not exists</string>
    <string name="batch_process_path_is_not_dir">path \n%s\n is not a directory</string>
    <string name="batch_process_processing_please_wait">process start,please wait</string>
    <string name="batch_process_finished_info">process finished!\ntotal count =  %d \nsuccess count = %d \nfailed count = %d \nfailed images are in directory \' %s \'</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
